--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,105 @@
+body {
+  box-sizing: border-box;
+}
+
 h1 {
-    font-family: 'EB Garamond', serif;
-  }
-  
-  p {
-    font-family: 'Roboto', sans-serif;
-  }
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 2em;
+}
+
+h2 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1.5em;
+}
+
+p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1em;
+}
+
+header {
+  background-color: rgba(177, 187, 90, 0.424);
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+main {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+section:nth-child(1) {
+  width: 40%;
+  margin-bottom: 40px;
+}
+
+section h2 {
+  margin-bottom: 10px;
+}
+
+section:nth-child(2) {
+  width: 40%;
+}
+
+fieldset {
+  border: 5px solid rgba(161, 95, 65, 0.835);
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+legend {
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+input[type=text] {
+  width: 95%;
+  margin-right: 5px;
+}
+
+section:nth-child(3) {
+  width: 100%;
+}
+
+section:nth-child(3) div {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+article {
+  border: 5px dashed rgba(161, 95, 65, 0.835);
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
+article p {
+  margin-top: 5px;
+  font-size: 1.1em;
+}
+
+table {
+  margin-top: 5px;
+}
+
+table * {
+  border: 2px solid black;
+  /* border-collapse: collapse; */
+  padding: 2px;
+  text-align: center;
+}
+
+footer {
+  background-color: rgba(177, 187, 90, 0.424);
+  position: relative;
+  bottom: 0px;
+  padding: 10px;
+  margin-top: 20px;
+  color: black;
+}
