--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ main {
 }
 
 section:nth-child(1) {
-  width: 40%;
+  width: 20%;
   margin-bottom: 40px;
 }
 
@@ -73,7 +73,7 @@ section:nth-child(3) div {
 }
 
 article {
-  border: 5px dashed rgba(161, 95, 65, 0.835);
+  border: 5px solid rgba(161, 95, 65, 0.835);
   display: flex;
   flex-direction: column;
   padding: 10px;
@@ -102,4 +102,22 @@ footer {
   padding: 10px;
   margin-top: 20px;
   color: black;
+}
+
+#cityStoreFront img{
+  float: left;
+  width:  300px;
+  height: 200px;
+  object-fit: cover;
+}
+
+img {
+float: left;
+width: 600px;
+height: 400px;
+object-fit: cover;
+border: 5px solid rgba(161, 95, 65, 0.835);
+display: flex;
+flex-direction: column;
+padding: 10px;
 }
